@@ -8,7 +8,7 @@
 \usage{
 \S4method{dotplot}{compareClusterResult}(object, x = ~Cluster,
   colorBy = "p.adjust", showCategory = 5, by = "geneRatio",
-  includeAll = TRUE, font.size = 12, title = "")
+  category = NULL, includeAll = TRUE, font.size = 12, title = "")
 }
 \arguments{
 \item{object}{compareClusterResult object}
@@ -20,6 +20,8 @@
 \item{showCategory}{category numbers}
 
 \item{by}{one of geneRatio, Percentage or count}
+
+\item{category}{ONTOLOGY or NULL}
 
 \item{includeAll}{logical}
 
